--- a/package.json
+++ b/package.json
@@ -9,18 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@clerk/nextjs": "^6.3.0",
+    "@clerk/themes": "^2.1.42",
+    "@lexical/react": "^0.16.1",
+    "@liveblocks/client": "^2.11.0",
+    "@liveblocks/node": "^2.11.0",
+    "@liveblocks/react": "^2.11.0",
+    "@liveblocks/react-lexical": "^2.11.0",
+    "@liveblocks/react-ui": "^2.11.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "jsm-editor": "^0.0.12",
+    "lexical": "^0.16.1",
+    "lucide-react": "^0.456.0",
+    "nanoid": "^5.0.8",
+    "next": "14.2.5",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "typescript": "^5"
   }
 }
